<resources>
    <string name="app_name">"Stock Xchange 2"</string>
    <string name="Share_Activity_Tittle">"Share Analysis"</string>
    <string name="Share_Name">"Name: "</string>
    <string name="Share_Current_Price">"Current Price: "</string>
    <string name="Share_Owned">"Shares Owned: "</string>
    <string name="Shares_Owned_Value">"Owned Value: "</string>
    <string name="Share_Prev_Close">"Last Close: "</string>
    <string name="Buy_Button">"Buy"</string>
    <string name="Sell_Button">"Sell"</string>
    <string name="Amount">"Number of Shares: "</string>
    <string name="Company_Activity_Title">"Company Analysis"</string>
    <string name="Company_Name">"Shortened Name: "</string>
    <string name="Company_Sector">"Industry: "</string>
    <string name="Company_Total_Value">"Total Value Reported: "</string>
    <string name="Total_Shares">"Shares: "</string>
    <string name="Player_Activity_Tittle">"Player Info"</string>
    <string name="Player_Money">"Money: "</string>
    <string name="Player_Assets">"Assets: "</string>
    <string name="Player_Net_Value">"Net Value: "</string>
    <string name="Player_Level">"Current Level: "</string>
    <string name="action_settings">"Settings"</string>
    <string name="title_activity_share">"Share Analysis"</string>
    <string name="dummy_button">"Dummy Button"</string>
    <string name="dummy_content">"DUMMY\nCONTENT"</string>
    <string name="title_activity_activity__info">"Activity_Info"</string>
    <string name="title_activity_info">"Rumors"</string>
    <string name="title_activity_buy">"BuyActivity"</string>
    <string name="CancelButton">"Cancel"</string>
    <string name="SettleDate">"Settle:"</string>
    <string name="Cost">"Price:"</string>
    <string name="Max">"Max"</string>
    <string name="Reset">"Reset"</string>
    <string name="title_activity_sell">"Sell"</string>
    <string name="title_activity_company">"Company Info"</string>
    <string name="CompanyInfo">"Info"</string>
    <string name="LastTermRev">"Last Term Revenue:"</string>
    <string name="ScamCheck">"Report"</string>
    <string name="OK">"Back"</string>
    <string name="title_activity_player_info">"My Info"</string>
    <string name="hello_world">"Hello world!"</string>
    <string name="PlayerNameLbl">"Name"</string>
    <string name="PlayerButton">"Player"</string>
    <string name="InfoButton">"INFO"</string>
    <string name="Player_Fame">"Fame:"</string>
    <string name="Zero">"0"</string>
    <string name="Exit">"Exit"</string>
    <string name="title_activity_welcome">"WelcomeActivity"</string>
    <string name="BackButton">"Back"</string>
    <string name="LastTermInvest">"Invested:"</string>
    <string name="Company_Sectror">"Industry:"</string>
    <string name="title_activity_messages">"Event Messages"</string>
    <string name="Messages">"Messages"</string>
    <string name="action_sound">"Play Sounds"</string>
    <string name="newGame">"New Game"</string>
    <string name="backMain">"Back to Main"</string>
    <string name="title_activity_economy_info">"Economy Info"</string>
    <string name="EconomySize">"Economy Size"</string>
    <string name="TotalCompanies">"Companies"</string>
    <string name="Economy">"Economy"</string>
    <string name="NextLevel">"Level up at:"</string>
    <string name="LevelUp">"Level Up"</string>
    <string name="TermEndDialogText">"Please wait while data calculation is in progress."</string>
    <string name="GetInfo">"Get Info"</string>
    <string name="title_activity_meeting">"MeetingActivity"</string>
    <string name="MeetingCancel">"I don\'t care"</string>
    <string name="PrevButton">"Previous"</string>
    <string name="NextButton">"Next"</string>
    <string name="actionBack">"Back to main"</string>
    <string name="Add100">"+100"</string>
    <string name="Add10">"+10"</string>
    <string name="Add1">"+1"</string>
    <string name="Remove1">"-1"</string>
    <string name="Remove10">"-10"</string>
    <string name="Remove100">"-100"</string>
    <string name="title_activity_news">"Daily Times"</string>
    <string name="News">"News"</string>
    <string name="ShortSales">"Days to settle:"</string>
    <string name="ShortSellWarning">"Short sales are settled at day start."</string>
    <string name="quick_game">"Quick Game"</string>
    <string name="About">"About"</string>
    <string name="title_activity_splash">"SplashActivity"</string>
    <string name="AppName">"StockXChange2"</string>
    <string name="TAG">"DevLog"</string>
    <string name="BuyActivityTitle">"Buy"</string>
    <string name="shares">"shares"</string>
    <string name="noInfo">"There are no info tips at this point."</string>
    <string name="NoNewsTitle">"All is well"</string>
    <string name="termEnd">"Starting Term"</string>
    <string name="NoNewsBody">"Nothing to report"</string>
    <string name="extra">"Extra: "</string>
    <string name="InvitTitle">"Invitation to a party"</string>
    <string name="invite1">"You received an Invitation to a party. Attending will cost $"</string>
    <string name="invite2">".00 and you will earn "</string>
    <string name="invite3">" assets.  What do you want to do?"</string>
    <string name="inviteAccept">"Accept"</string>
    <string name="InviteDecline">"Decline"</string>
    <string name="InfoUser">"USER "</string>
    <string name="InfoUserID">"USER %1$d"</string>
    <string name="Info1">"The %1$s company"</string>
    <string name="InfoIlligalPos">"is related to shady activities."</string>
    <string name="InfoIlligalNeg">"is not involved in illegal activities."</string>
    <string name="InfoShareUp">"share price is expected to increase."</string>
    <string name="InfoShareDown">"share price is expected to decrease"</string>
    <string name="NewsBunkrupty">"Company %1$s suddenly declared bankruptcy today.\n\nThe authorities state that the Company was found to be involved in shady activities, and the CEO was placed under arrest."</string>
    <string name="NewsBunkruptyTitle">"Company Bankrupts"</string>
    <string name="NewsDoubleSharesBody">"Company %1$s has decided to double its shares, to accommodate new investors through lower prices.\n\nAll investor shares have been doubled."</string>
    <string name="NewsDoubleShares">"%1$s Doubles Shares"</string>
    <string name="NewsHalfSharesBody">"Company %1$s has decided to half its shares, to accommodate new investors through higher prices.\n\nAll investor shares have been halved."</string>
    <string name="NewsHalfShares">"%1$s Halves Shares"</string>
    <string name="NewsPumpDump">"A Pump and Dump scheme was executed today, leaving %1$s shareholders in a tight situation, counting losses.\n\nLaw enforcement agencies are conducting an investigation to locate the person or persons responsible."</string>
    <string name="NewsPumpDumpTitle">"Stock Scheme leaves brokers in despair"</string>
    <string name="NewsShortDistort">"A Short and Distort scheme was executed today, leaving %1$s in a tight situation, counting losses.\n\nLaw enforcement agencies are conducting an investigation to locate the person or persons responsible."</string>
    <string name="NewsShortDistortTitle">"A company in distress"</string>
    <string name="NewsPonziTitle">"%1$s CEO Arrested"</string>
    <string name="NewsPonzi">"Company %1$s CEO was suddendly arrested today.  The authorities state that the Company was found to be involved in a Ponzi Scheme, and the CEO was placed under arrest."</string>
    <string name="NewsScandal">"Company %1$s was found to be in violation of multiple laws and regulations.  The results of the investigation, published by authorities, indicate corruption at the highest levels of the company, and the govemnment has already taken action."</string>
    <string name="NewsScandalTitle">"Finance world shaken"</string>
    <string name="ToastDayStart">"Day Started"</string>
    <string name="NewsQuakeTitle">"Earthquake"</string>
    <string name="NewsQuake">"An EarthQuake of Magnitude %1$0.1f has been reported."</string>
    <string name="NewsTyphoonTitle">"Typhoon"</string>
    <string name="NewsTyphoon">"A Typhoon of Category %1$d has hit our area."</string>
    <string name="NewsExplosionTitle">"Explosion"</string>
    <string name="NewsExplosion">"An explosion has been reported. The authorities are investigating the causes"</string>
    <string name="NewsRiotsTitle">"Riots"</string>
    <string name="NewsRiots">"There are reports of riots in the city center. Citizens are advised to avoid the area."</string>
    <string name="NewsWarTitle">"WAR"</string>
    <string name="NewsWar">"An invasion on our territory signals the start of a War. All armed forces have mobilized to deal with the invasion."</string>
    <string name="AvoidBankrupty">"Used Asset to escape Bankrupty"</string>
    <string name="GameOver">"GAME OVER"</string>
    <string name="GameOverMessage">"You have been arrested after amassing a tremendous amount of debt.\n\nYou have lost the game."</string>
    <string name="MessageOK">"OK"</string>
    <string name="CreditsTitle">"Credits"</string>
    <string name="Credits">""This game is the first work created by an independent developer. I hope you enjoyed it.\n\nImages come from free stock images sites (like Pixabay).\n\nLaunch Image/Icon by Katrina.Tuliao - http://www.flickr.com/photos/thewalkingirony/3051500551/\n\nBell sound recorded by Brylon Terry.\n\nThis game is and will remain free and open source.\n\nIf you liked it, please leave a good review.\n\nBugs and recomendations at\nswilliammccoy@gmail.com\nbill.fragkas@gmail.com""</string>
    <string name="QuickGameTitle">"Quick Game"</string>
    <string name="QuickGame">"The quick game option is useful for seeing what a level 5 player is like, and enjoy the full game, without fear of altering the saved data. It is not recommended for new players. Proceed?"</string>
    <string name="MessageGo">"Go"</string>
    <string name="NewGameTitle">"New Game"</string>
    <string name="NewGame">"\"Proceeding will erase all of your data and progress except your full assets.\n\nYou will start again at level 1 with $10000 and nothing owned.\n\nYou will also lose any part-gained assets.\n\nAre you sure you want to proceed?\""</string>
    <string name="NoButton">"NO"</string>
    <string name="ToastNewGameImpossible">"Not possible in Quick Game"</string>
    <string name="Quit">"Quit"</string>
    <string name="QuitMessage">"Do you want to exit the game?"</string>
    <string name="ExitButton">"Exit"</string>
    <string name="NewsBoomTitle">"Economic Boom"</string>
    <string name="NewsBoom">"The government officials report that the economy is Booming, and great profit is to be made in the foreseable future, in all Industries."</string>
    <string name="NewsAccelTitle">"Economy Accelerates"</string>
    <string name="NewsAccel">"The government officials report that the future of our economy is bright, and companies can expect above average profits."</string>
    <string name="NewsRecessTitle">"Economic Reccess"</string>
    <string name="NewsRecess">"The government officials report that the economy not doing very well, and companies should steer carefully to avoid losses."</string>
    <string name="NewsDepressionTitle">"Depression"</string>
    <string name="NewsDepression">"Economy is going from bad to worse, and government officials are discussing possible actions to help the economy recover."</string>
    <string name="NewInfo">New Info</string>
    <string name="EndTitle">Congratulations</string>
    <string name="EndBody">You are now a billionaire.   You can continue playing or start a new game.   You have completed this game in %1$d days.</string>
    <string name="TermReport">Previous term Report</string>
    <string name="TermReportBody1">In this term, %1$d companies declared bunkrupty,</string>
    <string name="TermReportBody2">%1$d companies entered the stock Exchange,</string>
</resources>