<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/QuickGame"
        android:title="@string/quick_game"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_NewGame"
        android:title="@string/newGame"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item android:id="@+id/menu_sound"
        android:title="@string/action_sound"
        android:orderInCategory="300"
        android:checkable="true"
        android:checked="true"
        app:showAsAction="never" />

    <item android:id="@+id/About"
        android:title="@string/About"
        android:orderInCategory="400"
        app:showAsAction="never" />

    <item android:id="@+id/menu_Exit"
        android:title="@string/Exit"
        android:orderInCategory="500"
        app:showAsAction="never" />

</menu>
