<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.galadar.stockxchange.SellActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/TopBar"
        android:background="@color/black"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/PlayerDataInfo"
            android:layout_weight="0.7"
            android:textColor="@color/white"
            android:text="Lvl 1: $1000000000 (99)"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:id="@+id/DaytimeInfo"
            android:textColor="@color/white"
            android:text="Term 50, Day 38"/>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TopBar"
        android:src="@drawable/buysell"
        android:id="@+id/BuyImage"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0"
        android:id="@+id/CenterLayout"
        android:layout_below="@id/BuyImage"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginTop="10dp"
            android:id="@+id/CenterLayoutLabels">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/Company_Name"
                android:id="@+id/ShareNameLbl"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"
                android:layout_below="@id/ShareNameLbl"
                android:id="@+id/ShareCurrPriLbl"
                android:text="@string/Share_Current_Price"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"
                android:layout_below="@id/ShareCurrPriLbl"
                android:id="@+id/SharesOwnedLbl"
                android:text="@string/Share_Owned" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"
                android:layout_below="@id/SharesOwnedLbl"
                android:id="@+id/ShareAmountLbl"
                android:text="@string/Amount" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"
                android:layout_below="@id/ShareAmountLbl"
                android:id="@+id/TotalValueLbl"
                android:text="@string/Cost" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginTop="10dp"
            android:id="@+id/CenterLayoutData">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/Company_Name"
                android:id="@+id/ShareNameDt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/ShareNameDt"
                android:id="@+id/ShareCurrPriDt"
                android:text="@string/Share_Current_Price"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/ShareCurrPriDt"
                android:id="@+id/SharesOwnedDt"
                android:text="2500" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"
                android:id="@+id/ShareAmountDt"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/SharesOwnedDt"
                android:text="@string/Zero" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/ShareAmountDt"
                android:id="@+id/TotalValueDt"
                android:text="@string/Zero" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/AmountButtonsLayout"
        android:layout_below="@id/CenterLayout"
        android:orientation="horizontal"
        android:weightSum="1.0"
        android:background="@color/black">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:id="@+id/ShortSettleLbl"
            android:visibility="invisible"
            android:text="@string/ShortSales"
            android:background="@color/black"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:text="@string/ShortSellWarning"
            android:id="@+id/ShortSellWarning"
            android:visibility="invisible"
            android:background="@color/black"
            android:textColor="@color/red"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/SettleDaysEditText" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/AmountButtonsLayout"
        android:layout_above="@+id/ActionButtonsLayout"
        android:weightSum="1.0">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/black"
            android:text="@string/Max"
            android:id="@+id/MaxSharesButton"
            android:layout_weight="0.12"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/black"
            android:text="@string/Add100"
            android:id="@+id/Add100SharesButton"
            android:layout_weight="0.13"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/black"
            android:text="@string/Add10"
            android:id="@+id/Add10SharesButton"
            android:layout_weight="0.15"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/black"
            android:text="@string/Add1"
            android:id="@+id/AddSharesButton"
            android:layout_weight="0.1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/black"
            android:text="@string/Remove1"
            android:id="@+id/RemSharesButton"
            android:layout_weight="0.1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/black"
            android:text="@string/Remove10"
            android:id="@+id/Rem10SharesButton"
            android:layout_weight="0.1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/black"
            android:text="@string/Remove100"
            android:id="@+id/Rem100SharesButton"
            android:layout_weight="0.1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/black"
            android:text="@string/Reset"
            android:id="@+id/ZeroSharesButton"
            android:layout_weight="0.2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black"
        android:weightSum="1.0"
        android:layout_alignParentBottom="true"
        android:id="@+id/ActionButtonsLayout">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/black"
            android:textColor="@color/white"
            android:id="@+id/CancelButton"
            android:text="@string/CancelButton"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/black"
            android:textColor="@color/white"
            android:id="@+id/SellButton"
            android:text="@string/Sell_Button"/>

    </LinearLayout>

    </RelativeLayout>
</LinearLayout>
