<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll"
        android:layout_above="@+id/pricesUpdate">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/pricesUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:text="UPDATE!!!"
        android:textColor="@color/white"
        android:onClick="updat"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/pricesUpdate"
        android:layout_toEndOf="@id/pricesUpdate"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/InfoButton"
        android:id="@+id/StartInfo"
        android:onClick="clickInfo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/StartInfo"
        android:layout_toEndOf="@id/StartInfo"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/PlayerButton"
        android:id="@+id/PlayerInfo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/PlayerInfo"
        android:layout_toEndOf="@id/PlayerInfo"
        android:onClick="ExitClicked"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/Exit"
        android:id="@+id/Exit" />

</RelativeLayout>
